<resources>
    <string name="app_name">Time Block</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_delete_label">delete</string>
    <string name="todo_title">To-Do List</string>
    <string name="title">Title</string>
    <string name="prompt">List Is Empty. Create A New Item.</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="item_description">Item Description</string>
    <string name="description">Description</string>
    <string name="fill_text_view">Description is Missing!</string>
    <string name="cancel_button">Cancel</string>
    <string name="caution_message">Selected Apps Will NOT Be Blocked</string>
    <string name="blocking_time">Work Period:</string>
    <string name="setup">Time Block Setup</string>
    <string name="rest_period">Rest Period:</string>
    <string name="loop_question">Set Loop Timer?</string>
    <string name="security_question">Friend Security?</string>
    <string name="help">help?</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
