<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/setup"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/blocking_time"
                android:textSize="20sp"/>


            <Button
                android:id="@+id/fragment_time_block_setup_work_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/rest_period"
                android:textSize="20sp"/>


            <Button
                android:id="@+id/fragment_time_block_setup_rest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

    <Switch
        android:id="@+id/fragment_time_block_setup_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/loop_question"
        android:textOff="NO"
        android:textOn="YES"
        android:padding="4dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <Switch
            android:id="@+id/fragment_time_block_setup_friend_security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/security_question"
            android:textOff="NO"
            android:textOn="YES"
            android:padding="2dp"/>

        <Button
            android:id="@+id/fragment_time_block_setup_security_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:padding="2dp"/>



    </LinearLayout>


    <Button
        android:id="@+id/fragment_time_block_setup_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"/>

    <Button
        android:id="@+id/fragment_time_block_setup_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"/>


</LinearLayout>